examples/test/testpolicy2267.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2267
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key18: value4
      key34: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value41
      podSelector:
        matchLabels:
          key37: value9
          key18: value17
          key30: value34
